[gd_scene load_steps=3 format=3 uid="uid://i0y3uc5jfcuj"]

[ext_resource type="Script" path="res://UI/menu_pause.gd" id="1_fueqk"]
[ext_resource type="Texture2D" uid="uid://c555jrgjye41k" path="res://UI/noir.png" id="1_jtk68"]

[node name="MenuPause" type="Node2D"]
script = ExtResource("1_fueqk")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="Arri√®rePlan" type="Sprite2D" parent="Menu"]
self_modulate = Color(1, 1, 1, 0.286275)
position = Vector2(553, 320)
scale = Vector2(1414, 880)
texture = ExtResource("1_jtk68")

[node name="btnMenu" type="Button" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -86.0
offset_right = 104.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "Menu
"

[node name="btnSauvegarder" type="Button" parent="Menu"]
offset_left = 473.0
offset_top = 298.0
offset_right = 680.0
offset_bottom = 349.0
text = "Sauvegarder"

[node name="btnRetour" type="Button" parent="Menu"]
offset_left = 473.0
offset_top = 359.0
offset_right = 680.0
offset_bottom = 409.0
text = "Retour"

[connection signal="pressed" from="Menu/btnMenu" to="." method="_on_btn_menu_pressed"]
[connection signal="button_down" from="Menu/btnSauvegarder" to="." method="_on_btn_sauvegarder_button_down"]
[connection signal="button_down" from="Menu/btnRetour" to="." method="_on_btn_retour_button_down"]
